--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,31 @@
 {
-  "extends": ["standard-react", "prettier", "prettier/react"],
-  "plugins": ["prettier", "react", "standard"],
+  "extends": ["airbnb", "prettier", "prettier/react"],
+  "rules": {
+    "class-methods-use-this": 0,
+    "no-bitwise": 0,
+    "no-console": ["error", { "allow": ["log", "warn", "error", "debug"] }],
+    "no-underscore-dangle": "off",
+    "no-prototype-builtins": 0,
+    "react/jsx-no-bind": 1,
+    "react/forbid-prop-types": 0,
+    "react/prop-types": 0,
+    "react/no-danger": 0,
+    "react/no-string-refs": 0,
+    "react/prefer-stateless-function": 0,
+    "react/no-did-mount-set-state": 0,
+    "semi": ["error", "never"],
+    "jsx-a11y/click-events-have-key-events": 0,
+    "jsx-a11y/no-static-element-interactions": 0,
+    "jsx-a11y/anchor-is-valid": 0,
+    "jsx-a11y/label-has-for": 0,
+    "jsx-a11y/mouse-events-have-key-events": 0,
+    "jsx-a11y/no-noninteractive-element-interactions": 0
+  },
+  "plugins": ["prettier"],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2017,
     "sourceType": "module",
-    "impliedStrict": true,
     "ecmaFeatures": {
       "jsx": true
     }
