--- a/.eslintrc
+++ b/.eslintrc
@@ -3,10 +3,11 @@
   "rules": {
     "class-methods-use-this": 0,
     "no-bitwise": 0,
-    "no-console": ["error", { "allow": ["log", "warn", "error", "debug"] }],
+    "no-console": 'off',
     "no-underscore-dangle": "off",
     "no-prototype-builtins": 0,
     "react/jsx-no-bind": 1,
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/forbid-prop-types": 0,
     "react/prop-types": 0,
     "react/no-danger": 0,
