--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "format": "prettier \"{src,ignite,storybook,tests,.}/**/*.{js,jsx}\" --write"
   },
   "dependencies": {
+    "@storybook/addon-actions": "^3.4.10",
+    "@storybook/addon-links": "^3.4.10",
+    "@storybook/addon-storyshots": "^3.4.0",
+    "@storybook/addons": "^3.4.0",
+    "@storybook/channels": "^3.4.0",
+    "@storybook/react-native": "^3.4.0",
     "apisauce": "^0.14.2",
     "format-json": "^1.0.3",
     "identity-obj-proxy": "^3.0.0",
@@ -33,6 +39,7 @@
     "prop-types": "15.6.0",
     "querystringify": "1.0.0",
     "ramda": "^0.25.0",
+    "ramdasauce": "^2.1.0",
     "react": "16.3.1",
     "react-native": "0.55.1",
     "react-native-animatable": "^1.3.0",
@@ -48,10 +55,6 @@
     "seamless-immutable": "^7.1.3"
   },
   "devDependencies": {
-    "@storybook/addon-storyshots": "^3.4.0",
-    "@storybook/addons": "^3.4.0",
-    "@storybook/channels": "^3.4.0",
-    "@storybook/react-native": "^3.4.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.1.1",
     "babel-jest": "23.2.0",
@@ -83,10 +86,7 @@
     "mockery": "^2.1.0",
     "prettier": "^1.13.7",
     "react-dom": "16.3.0",
-    "react-test-renderer": "16.3.1",
-    "reactotron-react-native": "^2.0.0-alpha.3",
-    "reactotron-redux": "^2.0.0-alpha.3",
-    "reactotron-redux-saga": "^2.0.0-alpha.3"
+    "react-test-renderer": "16.3.1"
   },
   "jest": {
     "testMatch": [
