--- a/package.json
+++ b/package.json
@@ -26,65 +26,64 @@
     "format": "prettier \"{src,ignite,storybook,tests,.}/**/*.{js,jsx}\" --write"
   },
   "dependencies": {
-    "apisauce": "^0.14.2",
+    "apisauce": "^1.0.2",
     "format-json": "^1.0.3",
     "identity-obj-proxy": "^3.0.0",
     "lodash": "^4.17.4",
-    "prop-types": "15.6.0",
-    "querystringify": "1.0.0",
+    "prop-types": "15.7.2",
+    "querystringify": "2.1.1",
     "ramda": "^0.25.0",
-    "react": "16.3.1",
-    "react-native": "0.55.1",
+    "react": "16.8.3",
+    "react-native": "^0.59.8",
     "react-native-animatable": "^1.3.0",
-    "react-native-config": "^0.10.0",
-    "react-native-device-info": "0.11.0",
-    "react-native-vector-icons": "4.3.0",
-    "react-navigation": "^2.6.2",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-persist": "^5.4.0",
-    "redux-saga": "^0.16.0",
-    "reduxsauce": "0.7.0",
+    "react-native-config": "^0.11.7",
+    "react-native-device-info": "^2.0.1",
+    "react-native-gesture-handler": "^1.2.1",
+    "react-native-vector-icons": "6.4.2",
+    "react-navigation": "^3.11.0",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
+    "redux-saga": "^1.0.2",
+    "reduxsauce": "1.1.0",
     "seamless-immutable": "^7.1.3"
   },
   "devDependencies": {
-    "@storybook/addon-storyshots": "^3.4.0",
-    "@storybook/addons": "^3.4.0",
-    "@storybook/channels": "^3.4.0",
-    "@storybook/react-native": "^3.4.0",
-    "babel-core": "6.26.0",
-    "babel-eslint": "7.1.1",
-    "babel-jest": "23.2.0",
-    "babel-plugin-ignite-ignore-reactotron": "^0.3.0",
+    "@babel/preset-env": "^7.4.0",
+    "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-storyshots": "^5.0.11",
+    "@storybook/addons": "^5.0.11",
+    "@storybook/channels": "^5.0.11",
+    "@storybook/react-native": "^4.1.18",
+    "@babel/core": "^7.4.4",
+    "@babel/runtime": "^7.4.4",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "^24.8.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-react-native": "^3.0.2",
     "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.0",
-    "eslint": "^5.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-config-standard-react": "^6.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jest": "^21.17.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-react": "^7.10.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "husky": "^0.14.3",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-config-standard-react": "^7.0.2",
+    "eslint-plugin-import": "^2.17.0",
+    "eslint-plugin-jest": "^22.06.0",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-standard": "^4.0.0",
+    "husky": "^2.3.0",
     "ignite-animatable": "^1.0.0",
     "ignite-dev-screens": "^2.3.0",
-    "ignite-ir-boilerplate-andross": "^2.3.3",
-    "ignite-redux-persist": "^1.1.0",
+    "ignite-ir-boilerplate-andross": "^2.4.1",
+    "ignite-redux-persist": "^1.1.2",
     "ignite-vector-icons": "^1.1.0",
-    "jest": "23.3.0",
+    "jest": "^24.8.0",
     "mockery": "^2.1.0",
-    "prettier": "^1.13.7",
-    "react-dom": "16.3.0",
-    "react-test-renderer": "16.3.1",
-    "reactotron-react-native": "^2.0.0-alpha.3",
-    "reactotron-redux": "^2.0.0-alpha.3",
-    "reactotron-redux-saga": "^2.0.0-alpha.3"
+    "prettier": "^1.17.1",
+    "react-dom": "16.8.6",
+    "metro-react-native-babel-preset": "^0.54.0",
+    "react-test-renderer": "16.8.6"
   },
   "jest": {
     "testMatch": [
