--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,9 @@
 {
-  "extends": ["standard-react", "prettier", "prettier/react"],
-  "plugins": ["prettier", "react", "standard"],
+  "extends": ["airbnb", "prettier", "prettier/react"],
+  "plugins": ["prettier", "react"],
   "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 2017,
+    "ecmaVersion": 2018,
     "sourceType": "module",
     "impliedStrict": true,
     "ecmaFeatures": {
@@ -15,5 +15,17 @@
     "es6": true,
     "jest": true,
     "node": true
+  },
+  "rules": {
+    "no-console": ["error", { "allow": ["info", "error"] }],
+    "no-unused-vars": ["error", { "varsIgnorePattern": "navigationOptions" }],
+    "no-underscore-dangle": "off",
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/anchor-is-valid": "off",
+    "jsx-a11y/label-has-for": "off",
+    "jsx-a11y/mouse-events-have-key-events": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off"
   }
 }
