--- a/package.json
+++ b/package.json
@@ -49,29 +49,28 @@
     "seamless-immutable": "^7.1.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.4.4",
     "@storybook/addon-storyshots": "^5.0.11",
     "@storybook/addons": "^5.0.11",
     "@storybook/channels": "^5.0.11",
     "@storybook/react-native": "^4.1.18",
-    "@babel/core": "^7.4.4",
-    "@babel/runtime": "^7.4.4",
     "babel-eslint": "10.0.1",
     "babel-jest": "^24.8.0",
     "babel-preset-env": "^1.6.1",
     "enzyme": "^3.2.0",
     "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.3.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-config-standard-react": "^7.0.2",
     "eslint-plugin-import": "^2.17.0",
     "eslint-plugin-jest": "^22.06.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-standard": "^4.0.0",
     "husky": "^2.3.0",
     "ignite-animatable": "^1.0.0",
     "ignite-dev-screens": "^2.3.0",
@@ -79,11 +78,16 @@
     "ignite-redux-persist": "^1.1.2",
     "ignite-vector-icons": "^1.1.0",
     "jest": "^24.8.0",
+    "metro-react-native-babel-preset": "^0.54.0",
     "mockery": "^2.1.0",
     "prettier": "^1.17.1",
     "react-dom": "16.8.6",
-    "metro-react-native-babel-preset": "^0.54.0",
     "react-test-renderer": "16.8.6"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn format && yarn lint"
+    }
   },
   "jest": {
     "testMatch": [
@@ -101,6 +105,5 @@
       "<rootDir>/tests/setup"
     ],
     "preset": "react-native"
-  },
-  "config": {}
+  }
 }
